# upload-slo

./: MANIFEST.in  install.sh  setup.cfg  uninstall.sh
uploadslo/api/: __init__.py  uploadslo.py  uploadslo_rest_api.py
uploadslo/content/uploadslo/: panel.py  urls.py  views.py
uploadslo/content/uploadslo/templates/uploadslo/: index.html
uploadslo/enabled/: _1930_uploadslo.py
uploadslo/static/dashboard/project/uploadslo/uploadslo/: multiple-file-change-directive.js  upload-object-controller.js  upload-object-modal.html  upload-slo-controller.js  upload-slo-modal.html  uploadslo-api.service.js  uploadslo.js  uploadslo.service.js
