[metadata]
name = uploadslo
summary = A panel plugin for OpenStack Dashboard
description-file =
    README.rst
author = Mohana Sarmiento
author_email = mo.sarmiento@utoronto.ca
home-page = https://docs.openstack.org/horizon/latest/
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[files]
packages =
    uploadslo